fixing window resize issue and about links being covered up

--- a/styles/AboutSection.module.scss
+++ b/styles/AboutSection.module.scss
@@ -4,6 +4,8 @@
   max-width: 1010px;
   margin: auto;
   padding-top: 50px;
+  position: relative;
+  z-index: 1;
 
   h2 {
     margin-top: 0;
